// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormField default renders children with styling 1`] = `
.c1 + .c0 {
  margin-top: 16px;
}

.c2 {
  display: block;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <input />
  </div>
</div>
`;

exports[`FormField with a label renders the label component above the childen 1`] = `
<styled.div
  inline={true}
>
  <Memo(Label)
    align="left"
    help="Help me!"
    htmlFor="formField"
    inline={true}
    inputSize="small"
    pr={2}
    width={20}
  >
    Name
  </Memo(Label)>
  <input />
</styled.div>
`;

exports[`FormField with fieldHelp and fieldHelpInline=true renders the FieldHelp component below the childen 1`] = `
<styled.div
  inline={true}
>
  <FieldHelp
    labelInline={true}
    labelWidth={20}
  >
    Help me!
  </FieldHelp>
  <input />
</styled.div>
`;

exports[`FormField with fieldHelp default renders the FieldHelp component below the childen 1`] = `
Array [
  <styled.div
    inline={true}
  >
    <input />
  </styled.div>,
  <FieldHelp
    labelInline={true}
    labelWidth={20}
  >
    Help me!
  </FieldHelp>,
]
`;

exports[`FormField with mb prop set should set the correct bottom margin 1`] = `
.c3 + .c0 {
  margin-top: 16px;
}

.c1 + .c0 {
  margin-top: 16px;
}

.c1.c1.c1 {
  margin-bottom: 40px;
}

.c2 {
  display: block;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <input />
  </div>
</div>
`;
